// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuCategory Snapshot menu.times length < isAmount 1`] = `
<div
  className="MenuCategory-root-1 root"
>
  <Typography
    className="MenuCategory-title-2 title"
    color="secondary"
    name="category"
  >
    category
  </Typography>
  <div
    className="MenuCategory-flexBoxStart-4 flexBoxStart"
  >
    <MenuItem
      item={
        Object {
          "_id": 1,
        }
      }
    />
    <MenuItem
      item={
        Object {
          "_id": 2,
        }
      }
    />
  </div>
  <HiddenItemPanel
    category="category"
    items={Array []}
  />
</div>
`;

exports[`MenuCategory Snapshot menu.times length > isAmount 1`] = `
<div
  className="MenuCategory-root-1 root"
>
  <Typography
    className="MenuCategory-title-2 title"
    color="secondary"
    name="category"
  >
    category
  </Typography>
  <div
    className="MenuCategory-flexBoxAround-3 flexBoxAround"
  >
    <MenuItem
      item={
        Object {
          "_id": 1,
        }
      }
    />
  </div>
  <HiddenItemPanel
    category="category"
    items={
      Array [
        Object {
          "_id": 2,
        },
      ]
    }
  />
</div>
`;
